--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,31 @@
 
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
-<div> index.html  hey !!  
+
+ <div id="gallery">
+    <figure>
+          	<header class="heading">Gallery Title Goes Here</header>
+          
+			{% for field in object_list.fields %}
+				<li class="one_quarter">
+					<a href="#"><img src="{% static '/images/demo/gallery/01.png' %}" alt=""> {{ field.name }}</a>
+				</li> 
+
+			{% endfor %}
+
+			  
+
+			{% for cat in object_list.category %}
+				<li class="one_quarter">
+					<a href="#"><img src="{% static '/images/demo/gallery/01.png' %}"alt=""> {{ cat.name }}</a>
+				</li> 
+			{% endfor %}	
 
 
-    {% for field in object_list.fields %}
-     <li> {{ field.name }} 1 </li>
-    {% endfor %}
-     {% for cat in object_list.category %}
-     <li> {{ cat.name }} 1 </li>
-    {% endfor %}
-    {{ object_list }}
+     		<figcaption>Gallery Description Goes Here</figcaption>
+    </figure>
+  </div>
+
     
-</div>
 {% endblock %}
