Added google oauth partial

--- a/templates/about.html
+++ b/templates/about.html
@@ -9,24 +9,25 @@ Licence URI: https://www.os-templates.com/template-terms
 <html lang="">
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 <head>
-<title>Prohunt</title>
+<title>Yoffa</title>
 <meta charset="utf-8">
-{% load static %}
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="{% static 'layout/styles/layout.css' %}" rel="stylesheet" type="text/css" media="all">
 </head>
+
+{% load static %}
 <body id="top">
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- Top Background Image Wrapper -->
-<div class="topspacer bgded overlay" style="background-image:url('{% static 'images/demo/backgrounds/2.jpg' %}');"> 
+<div class="topspacer bgded overlay" style="background-image:url('images/demo/backgrounds/01.png');"> 
   <!-- ################################################################################################ -->
   <div class="wrapper row1">
     <header id="header" class="hoc clear"> 
       <!-- ################################################################################################ -->
       <div id="logo" class="fl_left">
-        <h1><a href="index.html">Prohunt</a></h1>
+        <h1><a href="index.html">Yoffa</a></h1>
       </div>
       <!-- ################################################################################################ -->
       <nav id="mainav" class="fl_right">
@@ -70,7 +71,6 @@ Licence URI: https://www.os-templates.com/template-terms
       <ul class="slides">
         <li>
           <article>
-
             <p class="heading">Tortor viverra tristique proin</p>
             <h2 class="heading">Ut nisl dictum blandit</h2>
             <p>Nulla a consectetur lacus duis maximus in dolor in vestibulum</p>
@@ -105,20 +105,20 @@ Licence URI: https://www.os-templates.com/template-terms
       <!-- ################################################################################################ -->
       <li>
         <div><i class="fa fa-3x fa-clock-o"></i>
-          <h4 class="heading">Learn</h4>
-          <p>Get master class teaching</p>
+          <h4 class="heading">Opening hours</h4>
+          <p>08.00 - 18.30 / Mon. - Fri.</p>
         </div>
       </li>
       <li>
         <div><i class="fa fa-3x fa-phone"></i>
-          <h4 class="heading">Find a Consultant</h4>
-          <p>Reserve for consultant meet up</p>
+          <h4 class="heading">Our call centre</h4>
+          <p>(+00) 123 456789</p>
         </div>
       </li>
       <li>
         <div><i class="fa fa-3x fa-envelope-o"></i>
-          <h4 class="heading">Search for Professionals</h4>
-          <p>Get professional service and hire them for your project</p>
+          <h4 class="heading">Send us a mail</h4>
+          <p>support@domainname.com</p>
         </div>
       </li>
       <!-- ################################################################################################ -->
@@ -134,12 +134,12 @@ Licence URI: https://www.os-templates.com/template-terms
   <section class="hoc container clear"> 
     <!-- ################################################################################################ -->
     <div class="sectiontitle">
-      <h6 class="heading">Find the best professionals</h6>
-      <p>Get top 3 proffesional who had contributed most articles and priorities oldest from date of signup </p>
+      <h6 class="heading">Ligula cursus ut aenean nec</h6>
+      <p>Quam ullamcorper volutpat augue eu sodales augue</p>
     </div>
     <ul class="nospace group intro">
       <li class="one_third first">
-        <article><a href="#"><img src="{% static 'images/demo/320x190.png' %}" alt=""></a>
+        <article><a href="#"><img src="images/demo/320x190.png" alt=""></a>
           <div class="excerpt">
             <h6 class="heading">Suspendisse eleifend</h6>
             <p>Ullamcorper mi in elementum donec ex felis commodo non condimentum faucibus volutpat phasellus&hellip;</p>
@@ -148,7 +148,7 @@ Licence URI: https://www.os-templates.com/template-terms
         </article>
       </li>
       <li class="one_third">
-        <article><a href="#"><img src="{% static 'images/demo/320x190.png'%}" alt=""></a>
+        <article><a href="#"><img src="images/demo/320x190.png" alt=""></a>
           <div class="excerpt">
             <h6 class="heading">Dictum erat suspendisse</h6>
             <p>Varius magna ipsum lacinia vehicula lacus tincidunt et nulla auctor magna nec ornare condimentum&hellip;</p>
@@ -157,7 +157,7 @@ Licence URI: https://www.os-templates.com/template-terms
         </article>
       </li>
       <li class="one_third">
-        <article><a href="#"><img src="{% static 'images/demo/320x190.png' %}" alt=""></a>
+        <article><a href="#"><img src="images/demo/320x190.png" alt=""></a>
           <div class="excerpt">
             <h6 class="heading">Duis ac orci pulvinar</h6>
             <p>Consequat massa in mattis justo aliquam sit amet malesuada elit vitae lobortis nisi nunc maximus&hellip;</p>
@@ -177,7 +177,7 @@ Licence URI: https://www.os-templates.com/template-terms
     <!-- main body -->
     <!-- ################################################################################################ -->
     <div class="sectiontitle">
-      <h6 class="heading">Journals from Industry's PPro</h6>
+      <h6 class="heading">Mauris nec eros feugiat</h6>
       <p>Curabitur ornare turpis id placerat tempor etiam</p>
     </div>
     <ul class="nospace group">
@@ -214,14 +214,14 @@ Licence URI: https://www.os-templates.com/template-terms
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div class="wrapper bgded overlay" style="background-image:url('{% static 'images/demo/backgrounds/02.png' %}');">
+<div class="wrapper bgded overlay" style="background-image:url('images/demo/backgrounds/02.png');">
   <article class="hoc container clear cta"> 
     <!-- ################################################################################################ -->
     <div class="three_quarter first">
       <h6 class="nospace">Ipsum a diam posuere eget</h6>
       <p class="nospace">Aliquam enim iaculis donec nisi sem ornare tristique faucibus ac ornare eget eros</p>
     </div>
-    <footer class="one_quarter"><a class="btn medium" href="/proregister">Register as Professional &raquo;</a></footer>
+    <footer class="one_quarter"><a class="btn medium" href="#">Proin cursus erat &raquo;</a></footer>
     <!-- ################################################################################################ -->
   </article>
 </div>
@@ -237,21 +237,21 @@ Licence URI: https://www.os-templates.com/template-terms
     </div>
     <ul class="nospace group">
       <li class="one_third first">
-        <figure><a href="#"><img src="{% static 'images/demo/320x190.png' %}" alt=""></a>
+        <figure><a href="#"><img src="images/demo/320x190.png" alt=""></a>
           <figcaption>
             <p>Dolor phasellus et pharetra dolor vivamus a leo tincidunt rhoncus ipsum id&hellip;</p>
           </figcaption>
         </figure>
       </li>
       <li class="one_third">
-        <figure><a href="#"><img src="{% static 'images/demo/320x190.png' %}" alt=""></a>
+        <figure><a href="#"><img src="images/demo/320x190.png" alt=""></a>
           <figcaption>
             <p>Convallis ipsum mauris massa ac diam venenatis ultricies ultricies congue vel&hellip;</p>
           </figcaption>
         </figure>
       </li>
       <li class="one_third">
-        <figure><a href="#"><img src="{% static 'images/demo/320x190.png' %}" alt=""></a>
+        <figure><a href="#"><img src="images/demo/320x190.png" alt=""></a>
           <figcaption>
             <p>Turpis suspendisse ornare massa ac justo tincidunt commodo morbi gravida est&hellip;</p>
           </figcaption>
@@ -264,7 +264,7 @@ Licence URI: https://www.os-templates.com/template-terms
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div class="wrapper row4 bgded overlay" style="background-image:url('{% static 'images/demo/backgrounds/03.png' %}' );">
+<div class="wrapper row4 bgded overlay" style="background-image:url('images/demo/backgrounds/03.png');">
   <footer id="footer" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <div class="one_quarter first">
